# pyhelloworld

./: .gitignore  AGENTS.md  BUILD.md  Makefile  README.md  build.ps1  pyhelloworld.spec  pyproject.toml
docs/: pyinstaller-windows-best-practices.md
installer/: pyhelloworld.nsi
scripts/: build_installer.py  windows-test-install.py  windows_test_install.py
src/pyhelloworld/: __init__.py  paths.py  pyhelloworld.py
tests/: test_compiled.py  test_installed.py
tests/pyhelloworld/: test_pyhelloworld.py
