[project]
name = "pyhelloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhelloworld"]

[project.scripts]
pyhelloworld = "pyhelloworld.pyhelloworld:main"


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "basedpyright",
    "pre-commit"
]

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [".venv"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
# Type checking mode (equivalent to mypy --strict)
typeCheckingMode = "standard"
# Python version target
pythonVersion = "3.13"
# Include source directories
include = ["src", "tests"]
# Exclude virtual environment
exclude = [".venv"]
# Report unused imports
reportUnusedImport = true
# Don't require type annotations for test fixtures
reportUnknownParameterType = false
